--- a/package.json
+++ b/package.json
@@ -17,17 +17,17 @@
     "formik": "2.2.9",
     "gh-pages": "3.2.3",
     "jest": "27.5.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "5.3.0",
     "react-scripts": "5.0.0",
     "react-test-renderer": "17.0.2",
     "redux": "^4.1.2",
-    "redux-form": "8.3.8",
+    "redux-form": "^8.3.9",
     "redux-thunk": "^2.4.2",
     "reselect": "4.1.5",
-    "typescript": "4.4.2",
+    "typescript": "^4.9.3",
     "uuid": "8.3.2",
     "web-vitals": "2.1.0"
   },
@@ -59,8 +59,8 @@
   },
   "devDependencies": {
     "@types/node": "16.7.13",
-    "@types/react": "17.0.20",
-    "@types/react-dom": "17.0.9",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
     "@types/react-redux": "7.1.22",
     "@types/react-router-dom": "5.3.3",
     "@types/react-test-renderer": "17.0.1",
