--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.10.9",
-    "@mui/material": "^5.10.13",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.7",
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "12.0.0",
     "@testing-library/user-event": "13.2.1",
@@ -20,7 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^7.2.6",
-    "react-router-dom": "5.3.0",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.0",
     "react-test-renderer": "^18.2.0",
     "redux": "^4.1.2",
@@ -29,7 +29,8 @@
     "reselect": "^4.1.7",
     "typescript": "^4.9.3",
     "uuid": "8.3.2",
-    "web-vitals": "2.1.0"
+    "web-vitals": "2.1.0",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
